bugfix: tooltip wrong color

--- a/style.css
+++ b/style.css
@@ -150,7 +150,7 @@ input[type="range"]::-moz-range-thumb {
 /* Tooltip styles */
 #tooltip {
     background-color: rgba(0, 0, 0, 0.75);
-    color: white;
+    color: black;
     padding: 0.25rem; /* Adjusted padding */
     border-radius: 4px;
     font-size: 0.75rem; /* Adjusted font size */
